Update tu PC lên

--- a/pages/about-logged.html
+++ b/pages/about-logged.html
@@ -14,7 +14,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap" rel="stylesheet"> 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -74,39 +76,40 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="loggedin.html" class="nav-item nav-link">Home</a>
-                    <a href="about-logged.html" class="nav-item nav-link active">About Us</a>
-                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
-                    
-                    <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+                    <a href="about-logged.html" class="nav-item nav-link active">Giới thiệu</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Sản phẩm</a>
+                    <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
+                    <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
-                <div class="navbar-nav ms-auto">
+                <div class="navbar-nav ms-3">
                     <!-- Shopping cart -->
                     <a href="cart.html" class="nav-link me-3">
                         <img src="../img/shopping-cart-white.png" alt="Cart"
-                            style="width:40px; height:40px; object-fit:cover;">
+                            style="width: 40px; height: 40px; object-fit: cover" />
                     </a>
 
                     <!-- Avatar -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                            <img src="../img/human_white.png" alt="User"
-                                style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
+                            <img src="../img/human_white.png" alt="User" style="
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 0%;
+                    object-fit: cover;
+                  " />
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
-                            <a href="user-profile.html" class="dropdown-item">Thông tin</a>
+                            <a href="profile.html" class="dropdown-item">Thông tin</a>
                             <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </nav>
@@ -116,8 +119,8 @@
     <div class="container-fluid bg-dark bg-img p-5 mb-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-uppercase text-white">About Us</h1>
-                <a href="loggedin.html">Home</a>
+                <h1 class="display-4 text-uppercase text-white">Giới thiệu</h1>
+                <a href="loggedin.html">Trang chủ</a>
 
             </div>
         </div>
@@ -129,8 +132,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
-                <h2 class="text-primary font-secondary">About Us</h2>
-                <h1 class="display-4 text-uppercase">Welcome To CakeZone</h1>
+                <h2 class="text-primary font-secondary">Về chúng tôi</h2>
+                <h1 class="display-4 text-uppercase">Chào mừng đến với CakeZone</h1>
             </div>
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 400px;">
@@ -139,24 +142,36 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pb-5">
-                    <h4 class="mb-4">Tempor erat elitr rebum clita. Diam dolor diam ipsum erat lorem sed stet labore lorem sit clita duo</h4>
-                    <p class="mb-5">Tempor erat elitr at rebum at at clita. Diam dolor diam ipsum et tempor sit. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet magna</p>
+                    <h4 class="mb-4">CakeZone – Nơi ngọt ngào gặp gỡ sự lành mạnh</h4>
+                    <p class="mb-5">
+                        Tại CakeZone, chúng tôi tin rằng niềm vui từ những chiếc bánh không cần phải đánh đổi bằng sức
+                        khỏe.
+                        Mỗi chiếc bánh được làm từ nguyên liệu tự nhiên, ít đường, không chất bảo quản, và được cân
+                        chỉnh tỉ mỉ để vừa ngon miệng vừa tốt cho cơ thể.
+                        Từ bánh kem sinh nhật, bánh mousse, đến bánh ngọt ăn kiêng, tất cả đều mang hương vị tinh tế và
+                        trọn vẹn tình yêu của người thợ làm bánh.
+                    </p>
                     <div class="row g-5">
                         <div class="col-sm-6">
-                            <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4" style="width: 90px; height: 90px;">
-                                <i class="fa fa-heartbeat fa-2x text-white"></i>
+                            <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4"
+                                style="width: 90px; height: 90px;">
+                                <i class="fa fa-leaf fa-2x text-white"></i>
                             </div>
-                            <h4 class="text-uppercase">100% Healthy</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
+                            <h4 class="text-uppercase">Nguyên liệu tự nhiên</h4>
+                            <p class="mb-0">Sử dụng bột hạnh nhân, yến mạch, đường ăn kiêng và trái cây tươi – mang đến
+                                vị ngọt thanh thuần khiết.</p>
                         </div>
                         <div class="col-sm-6">
-                            <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4" style="width: 90px; height: 90px;">
-                                <i class="fa fa-award fa-2x text-white"></i>
+                            <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4"
+                                style="width: 90px; height: 90px;">
+                                <i class="fa fa-birthday-cake fa-2x text-white"></i>
                             </div>
-                            <h4 class="text-uppercase">Award Winning</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
+                            <h4 class="text-uppercase">Bánh tươi mỗi ngày</h4>
+                            <p class="mb-0">Tất cả sản phẩm đều được làm mới trong ngày để đảm bảo hương vị và chất
+                                lượng tốt nhất.</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -170,7 +185,8 @@
             <div class="row gx-5 gy-4">
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex">
-                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3"
+                            style="width: 60px; height: 60px;">
                             <i class="fa fa-star text-white"></i>
                         </div>
                         <div class="ps-4">
@@ -181,7 +197,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex">
-                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3"
+                            style="width: 60px; height: 60px;">
                             <i class="fa fa-users text-white"></i>
                         </div>
                         <div class="ps-4">
@@ -192,7 +209,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex">
-                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3"
+                            style="width: 60px; height: 60px;">
                             <i class="fa fa-check text-white"></i>
                         </div>
                         <div class="ps-4">
@@ -203,7 +221,8 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex">
-                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                        <div class="bg-primary border-inner d-flex align-items-center justify-content-center mb-3"
+                            style="width: 60px; height: 60px;">
                             <i class="fa fa-mug-hot text-white"></i>
                         </div>
                         <div class="ps-4">
@@ -223,11 +242,16 @@
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
+                    <div
+                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
                         <a href="loggedin.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
+                            <h1 class="m-0 text-uppercase text-white"><i
+                                    class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd eos duo dolore no.</p>
+                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore
+                            stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum
+                            et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd
+                            eos duo dolore no.</p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -247,18 +271,25 @@
                                 <p class="mb-0">+012 345 67890</p>
                             </div>
                             <div class="d-flex mt-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
+                                        class="fab fa-twitter fw-normal"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
+                                        class="fab fa-facebook-f fw-normal"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
+                                        class="fab fa-linkedin-in fw-normal"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="loggedin.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-secondary mb-2" href="team-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
-                                <a class="text-secondary" href="contact-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-secondary mb-2" href="loggedin.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                <a class="text-secondary mb-2" href="about-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                                <a class="text-secondary mb-2" href="team-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                <a class="text-secondary" href="contact-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
