--- a/pages/contact.html
+++ b/pages/contact.html
@@ -98,7 +98,7 @@
             <a href="birthday-cake-1.html" class="nav-item nav-link active"
               >Sản phẩm</a
             >
-            <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
+            <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
             <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
           </div>
           <div class="navbar-nav ms-auto">
