--- a/pages/loggedin.html
+++ b/pages/loggedin.html
@@ -81,7 +81,7 @@
                     <a href="loggedin.html" class="nav-item nav-link active">Trang chủ</a>
                     <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
                     <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Sản phẩm</a>
-                    <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+                    <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
 
                     <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
                 </div>
@@ -101,7 +101,7 @@
                                 style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
-                            <a href="user-profile.html" class="dropdown-item">Thông tin</a>
+                            <a href="profile.html" class="dropdown-item">Thông tin</a>
                             <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
