--- a/pages/snack-cake-2-logged.html
+++ b/pages/snack-cake-2-logged.html
@@ -101,7 +101,7 @@
           <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
           <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
           <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
@@ -439,7 +439,7 @@
   <div class="d-flex justify-content-center mt-4">
     <nav aria-label="Cake list pages">
       <ul class="pagination">
-        <li class="page-item disabled">
+        <li class="page-item">
           <a class="page-link" href="snack-cake-1-logged.html" tabindex="-1">Trang trước</a>
         </li>
         <li class="page-item">
