--- a/pages/wedding-cake-1.html
+++ b/pages/wedding-cake-1.html
@@ -99,7 +99,7 @@
           <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
           <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
           <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
         </div>
         <div class="navbar-nav ms-auto">
@@ -235,7 +235,7 @@
               <img src="../img/wdcake-1.jpg" class="card-img-top" alt="Wedding Cake 1" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Vừa Ngọt</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
