--- a/pages/birthday-cake-3-logged.html
+++ b/pages/birthday-cake-3-logged.html
@@ -119,7 +119,7 @@
             <a href="birthday-cake-1-logged.html" class="nav-item nav-link active"
               >Sản phẩm</a
             >
-            <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+            <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
             <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
           </div>
 
