--- a/pages/birthday-cake-detail-1-logged.html
+++ b/pages/birthday-cake-detail-1-logged.html
@@ -33,93 +33,93 @@
   <link href="../css/cart.css" rel="stylesheet" />
 
   <style>
-      /* Container bọc ngoài có ảnh nền */
-      .card-wrapper {
-        background: url("img/bg.jpg") no-repeat center center;
-        background-size: cover;
-        padding: 40px;
-        /* tạo khoảng cách cho card nổi bật */
-      }
+    /* Container bọc ngoài có ảnh nền */
+    .card-wrapper {
+      background: url("img/bg.jpg") no-repeat center center;
+      background-size: cover;
+      padding: 40px;
+      /* tạo khoảng cách cho card nổi bật */
+    }
 
-      /* Card vẫn giữ nền trắng */
-      .card {
-        background-color: #fff;
-        border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      }
+    /* Card vẫn giữ nền trắng */
+    .card {
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-      .card a {
-        text-decoration: none;
-        color: #333;
-      }
+    .card a {
+      text-decoration: none;
+      color: #333;
+    }
 
-      .card a:hover {
-        color: #007bff;
-      }
+    .card a:hover {
+      color: #007bff;
+    }
 
-      /* Popup overlay */
-      .login-popup {
-        display: none;
-        position: fixed;
-        z-index: 2000;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        justify-content: center;
-        align-items: center;
-      }
+    /* Popup overlay */
+    .login-popup {
+      display: none;
+      position: fixed;
+      z-index: 2000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
 
-      .login-popup-content {
-        background: white;
-        padding: 25px 35px;
-        border-radius: 10px;
-        text-align: center;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        max-width: 350px;
-      }
+    .login-popup-content {
+      background: white;
+      padding: 25px 35px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      max-width: 350px;
+    }
 
-      .login-popup-content h5 {
-        color: #ff8c00;
-        margin-bottom: 10px;
-      }
+    .login-popup-content h5 {
+      color: #ff8c00;
+      margin-bottom: 10px;
+    }
 
-      .popup-buttons {
-        margin-top: 15px;
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-      }
+    .popup-buttons {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
 
-      .btn-secondary {
-        background-color: #ccc;
-        color: #333;
-        border: none;
-      }
+    .btn-secondary {
+      background-color: #ccc;
+      color: #333;
+      border: none;
+    }
 
-      .nav-tabs .nav-link.active {
-        border-color: transparent transparent #e88f2a transparent;
-        color: #e88f2a;
-        font-weight: 600;
-      }
+    .nav-tabs .nav-link.active {
+      border-color: transparent transparent #e88f2a transparent;
+      color: #e88f2a;
+      font-weight: 600;
+    }
 
-      .nav-tabs .nav-link {
-        color: #333;
-      }
+    .nav-tabs .nav-link {
+      color: #333;
+    }
 
-      .nav-tabs .nav-link:hover {
-        color: #e88f2a;
-      }
+    .nav-tabs .nav-link:hover {
+      color: #e88f2a;
+    }
 
-      .product-image {
-        width: 100%;
-        max-width: 450px;
-        height: auto;
-        border-radius: 12px;
-        object-fit: cover;
-      }
-    </style>
+    .product-image {
+      width: 100%;
+      max-width: 450px;
+      height: auto;
+      border-radius: 12px;
+      object-fit: cover;
+    }
+  </style>
 </head>
 
 <body>
@@ -170,7 +170,7 @@
           <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
           <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
           <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
@@ -203,7 +203,7 @@
     </div>
   </nav>
   <!-- Navbar End -->
-    <!-- Product Detail Start -->
+  <!-- Product Detail Start -->
   <div class="container mt-5">
     <div class="row">
       <!-- Breadcrumb -->
