--- a/pages/contact-logged.html
+++ b/pages/contact-logged.html
@@ -73,7 +73,7 @@
                 <div class="d-inline-flex align-items-center justify-content-center">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase mb-1">Call Us</h6>
+                        <h6 class="text-uppercase mb-1">Gọi cho chúng tôi</h6>
                         <span>+012 345 6789</span>
                     </div>
                 </div>
@@ -92,14 +92,12 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="loggedin.html" class="nav-item nav-link">Home</a>
-                    <a href="about-logged.html" class="nav-item nav-link">About Us</a>
-                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
-
-                    <a href="contact-logged.html" class="nav-item nav-link active">Contact Us</a>
+                    <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+                    <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Sản phẩm</a>
+                    <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
+                    <a href="contact-logged.html" class="nav-item nav-link active">Liên hệ</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
@@ -107,24 +105,27 @@
                     <!-- Shopping cart -->
                     <a href="cart.html" class="nav-link me-3">
                         <img src="../img/shopping-cart-white.png" alt="Cart"
-                            style="width:40px; height:40px; object-fit:cover;">
+                            style="width: 40px; height: 40px; object-fit: cover" />
                     </a>
 
                     <!-- Avatar -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                            <img src="../img/human_white.png" alt="User"
-                                style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
+                            <img src="../img/human_white.png" alt="User" style="
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 0%;
+                    object-fit: cover;
+                  " />
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
-                            <a href="user-profile.html" class="dropdown-item">Thông tin</a>
+                            <a href="profile.html" class="dropdown-item">Thông tin</a>
                             <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </nav>
@@ -135,8 +136,8 @@
     <div class="container-fluid bg-dark bg-img p-5 mb-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-uppercase text-white">Contact Us</h1>
-                <a href="loggedin.html">Home</a>
+                <h1 class="display-4 text-uppercase text-white">Liên hệ với chúng tôi</h1>
+                <a href="loggedin.html">Trang chủ</a>
             </div>
         </div>
     </div>
@@ -150,21 +151,21 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
                         <i class="bi bi-geo-alt fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Our Office</h6>
-                        <span>123 Street, New York, USA</span>
+                        <h6 class="text-uppercase my-2">Địa chỉ</h6>
+                        <span>123 Nguyễn Sơn, New York, USA</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
                         <i class="bi bi-envelope-open fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Email Us</h6>
-                        <span>info@example.com</span>
+                        <h6 class="text-uppercase my-2">Email</h6>
+                        <span>cakezone@gmail.com</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
                         <i class="bi bi-phone-vibrate fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Call Us</h6>
+                        <h6 class="text-uppercase my-2">Gọi cho chúng tôi</h6>
                         <span>+012 345 6789</span>
                     </div>
                 </div>
@@ -174,24 +175,24 @@
                     <form id="contactForm">
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Your Name"
+                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Họ tên"
                                     style="height: 55px;">
                             </div>
                             <div class="col-sm-6">
-                                <input type="email" class="form-control bg-light border-0 px-4" placeholder="Your Email"
+                                <input type="email" class="form-control bg-light border-0 px-4" placeholder="Email"
                                     style="height: 55px;">
                             </div>
                             <div class="col-sm-12">
-                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Subject"
+                                <input type="text" class="form-control bg-light border-0 px-4" placeholder="Tiêu đề"
                                     style="height: 55px;">
                             </div>
                             <div class="col-sm-12">
                                 <textarea class="form-control bg-light border-0 px-4 py-3" rows="4"
-                                    placeholder="Message"></textarea>
+                                    placeholder="Nội dung"></textarea>
                             </div>
                             <div class="col-sm-12">
-                                <button class="btn btn-primary border-inner w-100 py-3" type="submit">Send
-                                    Message</button>
+                                <button class="btn btn-primary border-inner w-100 py-3" type="submit">Gửi
+                                </button>
                             </div>
                         </div>
                     </form>
@@ -220,7 +221,7 @@
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
                     <div
                         class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-                        <a href="../index.html" class="navbar-brand">
+                        <a href="loggedin.html" class="navbar-brand">
                             <h1 class="m-0 text-uppercase text-white"><i
                                     class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
@@ -259,24 +260,23 @@
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="loggedin.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Trang chủ</a>
                                 <a class="text-secondary mb-2" href="about-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
-                                <a class="text-secondary mb-2" href="team-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Giới thiệu</a>
+                                <a class="text-secondary mb-2" href="birthday-cake-1-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Menu &
+                                    Pricing</a>
                                 <a class="text-secondary mb-2" href="contact-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Liên hệ</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
+                            <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
                             <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                                    <button class="btn btn-primary">Sign Up</button>
+                                    <input type="text" class="form-control border-white p-3" placeholder="Email">
+                                    <button class="btn btn-primary">Đăng ký</button>
                                 </div>
                             </form>
                         </div>
