--- a/pages/snack-cake-detail-1.html
+++ b/pages/snack-cake-detail-1.html
@@ -176,7 +176,7 @@
           <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
           <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
           <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
         </div>
         <div class="navbar-nav ms-auto">
@@ -214,7 +214,7 @@
 
       <!-- Product Details -->
       <div class="col-md-6">
-        <h2 class="mb-3">Bánh Cưới Vừa Ngọt</h2>
+        <h2 class="mb-3">Bánh Quy Vừa Ngọt</h2>
 
         <div class="mb-3">
           <span class="h4 me-2">$45.99</span>
