--- a/pages/team-logged.html
+++ b/pages/team-logged.html
@@ -76,14 +76,12 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="loggedin.html" class="nav-item nav-link    ">Home</a>
-                    <a href="about-logged.html" class="nav-item nav-link">About Us</a>
-                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team-logged.html" class="nav-item nav-link active">Master Chefs</a>
-
-                    <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+                    <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Sản phẩm</a>
+                    <a href="team-logged.html" class="nav-item nav-link active">Đầu bếp</a>
+                    <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
@@ -91,24 +89,27 @@
                     <!-- Shopping cart -->
                     <a href="cart.html" class="nav-link me-3">
                         <img src="../img/shopping-cart-white.png" alt="Cart"
-                            style="width:40px; height:40px; object-fit:cover;">
+                            style="width: 40px; height: 40px; object-fit: cover" />
                     </a>
 
                     <!-- Avatar -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                            <img src="../img/human_white.png" alt="User"
-                                style="width:40px; height:40px; border-radius:0%; object-fit:cover;">
+                            <img src="../img/human_white.png" alt="User" style="
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 0%;
+                    object-fit: cover;
+                  " />
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
-                            <a href="user-profile.html" class="dropdown-item">Thông tin</a>
+                            <a href="profile.html" class="dropdown-item">Thông tin</a>
                             <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </nav>
@@ -119,8 +120,8 @@
     <div class="container-fluid bg-dark bg-img p-5 mb-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-uppercase text-white">Master Chefs</h1>
-                <a href="loggedin.html">Home</a>
+                <h1 class="display-4 text-uppercase text-white">Đầu bếp</h1>
+                <a href="loggedin.html">Trang chủ</a>
             </div>
         </div>
     </div>
@@ -131,8 +132,8 @@
     <div class="container-fluid py-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
-                <h2 class="text-primary font-secondary">Team Members</h2>
-                <h1 class="display-4 text-uppercase">Our Master Chefs</h1>
+                <h2 class="text-primary font-secondary">Đội ngũ</h2>
+                <h1 class="display-4 text-uppercase">Đầu bếp</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
@@ -152,8 +153,8 @@
                             </div>
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
-                            <h4 class="text-uppercase text-primary">Full Name</h4>
-                            <p class="text-white m-0">Designation</p>
+                            <h4 class="text-uppercase text-primary">John Constatine</h4>
+                            <p class="text-white m-0">Đầu bếp chính</p>
                         </div>
                     </div>
                 </div>
@@ -174,8 +175,8 @@
                             </div>
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
-                            <h4 class="text-uppercase text-primary">Full Name</h4>
-                            <p class="text-white m-0">Designation</p>
+                            <h4 class="text-uppercase text-primary">Michael Smith</h4>
+                            <p class="text-white m-0">Đầu bếp bánh</p>
                         </div>
                     </div>
                 </div>
@@ -196,8 +197,8 @@
                             </div>
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
-                            <h4 class="text-uppercase text-primary">Full Name</h4>
-                            <p class="text-white m-0">Designation</p>
+                            <h4 class="text-uppercase text-primary">Jane Doe</h4>
+                            <p class="text-white m-0">Đầu bếp chính</p>
                         </div>
                     </div>
                 </div>
