--- a/pages/wedding-cake-1-logged.html
+++ b/pages/wedding-cake-1-logged.html
@@ -101,7 +101,7 @@
           <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
           <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
           <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
