--- a/pages/wedding-cake-detail-1-logged.html
+++ b/pages/wedding-cake-detail-1-logged.html
@@ -177,7 +177,7 @@
           <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
           <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
           <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp chính</a>
+          <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
           <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
