--- a/pages/birthday-cake-detail-1.html
+++ b/pages/birthday-cake-detail-1.html
@@ -217,7 +217,7 @@
         <h2 class="mb-3">Bánh Sinh Nhật Socola Vừa Ngọt</h2>
 
         <div class="mb-3">
-          <span class="h4 me-2">$45.99</span>
+          <span class="h4 me-2">320.000đ</span>
         </div>
 
         <p class="mb-4">
