--- a/pages/edit-info.html
+++ b/pages/edit-info.html
@@ -342,7 +342,7 @@
                         </li>
                         <li class="breadcrumb-item mb-0">
                             <a href="profile.html" class="text-decoration-none text-primary fw-semibold">
-                                Thông tin
+                                Thông tin cá nhân
                             </a>
                         </li>
                         <li class="breadcrumb-item active" aria-current="page">Chỉnh sửa thông tin</li>
