--- a/admin/user-detail-tranthib.html
+++ b/admin/user-detail-tranthib.html
@@ -199,17 +199,17 @@
           <form id="editForm">
             <div class="form-group">
               <label for="fullname" class="form-label">Họ và tên <span style="color: #e88f2a;">*</span></label>
-              <input type="text" class="form-control" id="fullname" name="fullname" value="Nguyễn Văn A" required>
+              <input type="text" class="form-control" id="fullname" name="fullname" value="Trần Thị B" required>
             </div>
 
             <div class="form-group">
               <label for="username" class="form-label">Tên tài khoản <span style="color: #e88f2a;">*</span></label>
-              <input type="text" class="form-control" id="username" name="username" value="nguyenvana" required>
+              <input type="text" class="form-control" id="username" name="username" value="tranthib" required>
             </div>
 
             <div class="form-group">
               <label for="email" class="form-label">Email <span style="color: #e88f2a;">*</span></label>
-              <input type="email" class="form-control" id="email" name="email" value="nguyenvana@example.com" required>
+              <input type="email" class="form-control" id="email" name="email" value="tranthib@example.com" required>
             </div>
 
             <div class="form-group password-field">
